# telemetry-assessment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: predictive_maintenance.ipynb
src/: features.py  utils.py
tests/: test_features.py
