[project]
name = "telemetry-assessment"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "shap>=0.44",
    "statsmodels>=0.14",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pandas-stubs",
    "types-seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/"]

[[tool.mypy.overrides]]
module = ["lightgbm.*", "shap.*", "statsmodels.*", "lifelines.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
